--- a/__tests__/index.html
+++ b/__tests__/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="/node_modules/next-js-core2/dist/next-js-core2.js"></script>
+  <script src="/node_modules/@feizheng/next-js-core2/dist/next-js-core2.js"></script>
   <script src="/next-boilerplate-package.js"></script>
 </head>
 <body>
